Catch unit tests up with JDK 17 --JVM argument allows modifying fields' visibility. Needed slight alteration to the setFinalStatic method too.