@@ -42,6 +42,15 @@ subprojects {
                 buildConfigField "String", "VERSION", "\"${ext.versionName}\""
             }
         }
+
+        testOptions {
+            unitTests.all {
+                jvmArgs(
+                        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+                )
+            }
+        }
     }
 
     dependencies {
